# Code_cubicle_5.0_deployment

./: Procfile  README.md  messages.json  readme.md  requirements.txt
Slack_ingestion/: .gitignore  ai_service.py  app.py  requirements.txt  slack_dashboard.py  slack_webhook.py  utils.py
Slack_ingestion/slack_pathway/: PATHWAY_IMPLEMENTATION.md  README.md  demo_pathway_concepts.py  pyproject.toml  setup.py  test_corrections.py  test_pathway_system.py  test_system.py
Slack_ingestion/slack_pathway/src/: ai_service.py  app.py  main.py  pathway_pipeline.py  pathway_rag_service.py  rag_query_service.py  stream.py
Slack_ingestion/slack_pathway/src/static/css/: style.css
Slack_ingestion/slack_pathway/src/static/js/: app.js  dashboard.js
Slack_ingestion/slack_pathway/src/templates/: dashboard.html  index.html  landing.html
Slack_ingestion/static/css/: style.css
Slack_ingestion/static/js/: app.js  dashboard.js  star_gazing.js
Slack_ingestion/templates/: base.html  dashboard.html  index.html  landing.html  login.html
virtual-assistant-llm/: Makefile  README.md
virtual-assistant-llm/src/: app.py
